// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript-simple > typescript-simple 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-const": "error",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
          "typescript/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-dynamic-delete": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-extraneous-class": "error",
          "typescript/no-invalid-void-type": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-nullish-coalescing": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-literal-enum-member": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "typescript/unified-signatures": "error",
        },
      },
    ],
    "plugins": [],
    "rules": {
      "no-invalid-regexp": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "@typescript-eslint/no-unnecessary-condition",
    ],
    "type-aware": [
      "@typescript-eslint/await-thenable",
      "@typescript-eslint/no-array-delete",
      "@typescript-eslint/no-base-to-string",
      "@typescript-eslint/no-confusing-void-expression",
      "@typescript-eslint/no-deprecated",
      "@typescript-eslint/no-duplicate-type-constituents",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/no-for-in-array",
      "@typescript-eslint/no-implied-eval",
      "@typescript-eslint/no-meaningless-void-operator",
      "@typescript-eslint/no-misused-promises",
      "@typescript-eslint/no-misused-spread",
      "@typescript-eslint/no-mixed-enums",
      "@typescript-eslint/no-redundant-type-constituents",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare",
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-unnecessary-type-arguments",
      "@typescript-eslint/no-unnecessary-type-assertion",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-unsafe-argument",
      "@typescript-eslint/no-unsafe-assignment",
      "@typescript-eslint/no-unsafe-call",
      "@typescript-eslint/no-unsafe-enum-comparison",
      "@typescript-eslint/no-unsafe-member-access",
      "@typescript-eslint/no-unsafe-return",
      "@typescript-eslint/no-unsafe-unary-minus",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/only-throw-error",
      "@typescript-eslint/prefer-promise-reject-errors",
      "@typescript-eslint/prefer-reduce-type-parameter",
      "@typescript-eslint/prefer-return-this-type",
      "@typescript-eslint/related-getter-setter-pairs",
      "@typescript-eslint/require-await",
      "@typescript-eslint/restrict-plus-operands",
      "@typescript-eslint/restrict-template-expressions",
      "@typescript-eslint/return-await",
      "@typescript-eslint/unbound-method",
      "@typescript-eslint/use-unknown-in-catch-callback-variable",
    ],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`typescript-simple --js-plugins > typescript-simple--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-const": "error",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
          "typescript/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-dynamic-delete": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-extraneous-class": "error",
          "typescript/no-invalid-void-type": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-nullish-coalescing": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-literal-enum-member": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "typescript/unified-signatures": "error",
        },
      },
    ],
    "plugins": [],
    "rules": {
      "no-invalid-regexp": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "@typescript-eslint/no-unnecessary-condition",
    ],
    "type-aware": [
      "@typescript-eslint/await-thenable",
      "@typescript-eslint/no-array-delete",
      "@typescript-eslint/no-base-to-string",
      "@typescript-eslint/no-confusing-void-expression",
      "@typescript-eslint/no-deprecated",
      "@typescript-eslint/no-duplicate-type-constituents",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/no-for-in-array",
      "@typescript-eslint/no-implied-eval",
      "@typescript-eslint/no-meaningless-void-operator",
      "@typescript-eslint/no-misused-promises",
      "@typescript-eslint/no-misused-spread",
      "@typescript-eslint/no-mixed-enums",
      "@typescript-eslint/no-redundant-type-constituents",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare",
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-unnecessary-type-arguments",
      "@typescript-eslint/no-unnecessary-type-assertion",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-unsafe-argument",
      "@typescript-eslint/no-unsafe-assignment",
      "@typescript-eslint/no-unsafe-call",
      "@typescript-eslint/no-unsafe-enum-comparison",
      "@typescript-eslint/no-unsafe-member-access",
      "@typescript-eslint/no-unsafe-return",
      "@typescript-eslint/no-unsafe-unary-minus",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/only-throw-error",
      "@typescript-eslint/prefer-promise-reject-errors",
      "@typescript-eslint/prefer-reduce-type-parameter",
      "@typescript-eslint/prefer-return-this-type",
      "@typescript-eslint/related-getter-setter-pairs",
      "@typescript-eslint/require-await",
      "@typescript-eslint/restrict-plus-operands",
      "@typescript-eslint/restrict-template-expressions",
      "@typescript-eslint/return-await",
      "@typescript-eslint/unbound-method",
      "@typescript-eslint/use-unknown-in-catch-callback-variable",
    ],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`typescript-simple --type-aware > typescript-simple--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "options": {
      "typeAware": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-const": "error",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
          "typescript/await-thenable": "error",
          "typescript/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "typescript/no-array-delete": "error",
          "typescript/no-base-to-string": "error",
          "typescript/no-confusing-void-expression": "error",
          "typescript/no-deprecated": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-duplicate-type-constituents": "error",
          "typescript/no-dynamic-delete": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-extraneous-class": "error",
          "typescript/no-floating-promises": "error",
          "typescript/no-for-in-array": "error",
          "typescript/no-implied-eval": "error",
          "typescript/no-invalid-void-type": "error",
          "typescript/no-meaningless-void-operator": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-misused-promises": "error",
          "typescript/no-misused-spread": "error",
          "typescript/no-mixed-enums": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-nullish-coalescing": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "error",
          "typescript/no-redundant-type-constituents": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-boolean-literal-compare": "error",
          "typescript/no-unnecessary-template-expression": "error",
          "typescript/no-unnecessary-type-arguments": "error",
          "typescript/no-unnecessary-type-assertion": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unnecessary-type-conversion": "error",
          "typescript/no-unnecessary-type-parameters": "error",
          "typescript/no-unsafe-argument": "error",
          "typescript/no-unsafe-assignment": "error",
          "typescript/no-unsafe-call": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-enum-comparison": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-unsafe-member-access": "error",
          "typescript/no-unsafe-return": "error",
          "typescript/no-unsafe-unary-minus": "error",
          "typescript/no-useless-default-assignment": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/only-throw-error": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-literal-enum-member": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/prefer-promise-reject-errors": "error",
          "typescript/prefer-reduce-type-parameter": "error",
          "typescript/prefer-return-this-type": "error",
          "typescript/related-getter-setter-pairs": "error",
          "typescript/require-await": "error",
          "typescript/restrict-plus-operands": [
            "error",
            {
              "allowAny": false,
              "allowBoolean": false,
              "allowNullish": false,
              "allowNumberAndString": false,
              "allowRegExp": false,
            },
          ],
          "typescript/restrict-template-expressions": [
            "error",
            {
              "allowAny": false,
              "allowBoolean": false,
              "allowNever": false,
              "allowNullish": false,
              "allowNumber": false,
              "allowRegExp": false,
            },
          ],
          "typescript/return-await": [
            "error",
            "error-handling-correctness-only",
          ],
          "typescript/triple-slash-reference": "error",
          "typescript/unbound-method": "error",
          "typescript/unified-signatures": "error",
          "typescript/use-unknown-in-catch-callback-variable": "error",
        },
      },
    ],
    "plugins": [],
    "rules": {
      "no-invalid-regexp": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "@typescript-eslint/no-unnecessary-condition",
    ],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`typescript-simple merge > typescript-simple--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "off",
          "no-array-constructor": "error",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-throw-literal": "off",
          "no-unsafe-negation": "off",
          "no-unused-expressions": "error",
          "no-unused-vars": "error",
          "no-useless-constructor": "error",
          "no-var": "error",
          "no-with": "off",
          "prefer-const": "error",
          "prefer-promise-reject-errors": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
          "require-await": "off",
          "typescript/ban-ts-comment": [
            "error",
            {
              "minimumDescriptionLength": 10,
            },
          ],
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-dynamic-delete": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-extraneous-class": "error",
          "typescript/no-invalid-void-type": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-nullish-coalescing": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-non-null-assertion": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-literal-enum-member": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "typescript/unified-signatures": "error",
        },
      },
    ],
    "plugins": [],
    "rules": {},
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "@typescript-eslint/no-unnecessary-condition",
    ],
    "type-aware": [
      "@typescript-eslint/await-thenable",
      "@typescript-eslint/no-array-delete",
      "@typescript-eslint/no-base-to-string",
      "@typescript-eslint/no-confusing-void-expression",
      "@typescript-eslint/no-deprecated",
      "@typescript-eslint/no-duplicate-type-constituents",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/no-for-in-array",
      "@typescript-eslint/no-implied-eval",
      "@typescript-eslint/no-meaningless-void-operator",
      "@typescript-eslint/no-misused-promises",
      "@typescript-eslint/no-misused-spread",
      "@typescript-eslint/no-mixed-enums",
      "@typescript-eslint/no-redundant-type-constituents",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare",
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-unnecessary-type-arguments",
      "@typescript-eslint/no-unnecessary-type-assertion",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-unsafe-argument",
      "@typescript-eslint/no-unsafe-assignment",
      "@typescript-eslint/no-unsafe-call",
      "@typescript-eslint/no-unsafe-enum-comparison",
      "@typescript-eslint/no-unsafe-member-access",
      "@typescript-eslint/no-unsafe-return",
      "@typescript-eslint/no-unsafe-unary-minus",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/only-throw-error",
      "@typescript-eslint/prefer-promise-reject-errors",
      "@typescript-eslint/prefer-reduce-type-parameter",
      "@typescript-eslint/prefer-return-this-type",
      "@typescript-eslint/related-getter-setter-pairs",
      "@typescript-eslint/require-await",
      "@typescript-eslint/restrict-plus-operands",
      "@typescript-eslint/restrict-template-expressions",
      "@typescript-eslint/return-await",
      "@typescript-eslint/unbound-method",
      "@typescript-eslint/use-unknown-in-catch-callback-variable",
    ],
    "unsupported": [],
  },
  "warnings": [],
}
`;
